# merge-logs

./: Makefile  README.md  pyproject.toml  setup.cfg
merge_logs/: merge_logs.py
tests/: test_errors.py  test_merge_logs.py
tests/fixtures/: 2.jsonl  result.jsonl  unaccessable.jsonl  unsupported_format.txt
