[tool.poetry]
name = "merge-logs"
version = "0.1.0"
description = "Script for merging two logs files (jsonl)."
authors = ["Artem Nechai <lenikol95@mail.ru>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[tool.poetry.scripts]
merge-logs = "merge_logs.merge_logs:main"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
wemake-python-styleguide = "^0.15.3"
autopep8 = "1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
